Fix trianglevisitor traversing triangle strips

Triangle strips contain index count - 2 triangles. Add degenerate triangle
handling.

Task-number: QTBUG-49808
Change-Id: I154b19beb2df80561cf60bbd4572b3c4c49ccd41
Reviewed-by: Tomi Korpipää <tomi.korpipaa@theqtcompany.com>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>